# slint-android-demo

./: Cargo.toml
.github/workflows/: android.yml
src/: lib.rs
